[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Person.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Gluten-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 14
font_data = SubResource( 3 )

[sub_resource type="CircleShape2D" id=4]
radius = 40.05

[node name="Person" type="Node2D" groups=["person"]]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
mouse_filter = 2

[node name="Label" type="Label" parent="."]
margin_left = -95.0
margin_top = -70.0
margin_right = 95.0
margin_bottom = -35.5
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
autowrap = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="HighlightColorRect" type="ColorRect" parent="."]
margin_left = -23.0
margin_top = -24.0
margin_right = -13.0
margin_bottom = -14.0
color = Color( 1, 0.662745, 0.662745, 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
